# ProgLang

./: CHANGELOG.md  LICENSE  ProgLang.cabal  README.md  parser.hs  testFile.prg
src/: Main.hs  Parser.hs  proglang.hs  test.hs
