cabal-version:      2.4
name:               ProgLang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vikhasle
maintainer:         vikhasle@icloud.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
	CHANGELOG.md
	README.md

executable ProgLang
	main-is:          Main.hs

	-- Modules included in this executable, other than Main.
	-- other-modules:
	
	-- LANGUAGE extensions used by modules in this package.
	-- other-extensions:
	build-depends:    parsec, base ^>=4.15.1.0
	hs-source-dirs:   src
	other-modules:    Parser
	default-language: Haskell2010
